--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack serve --mode development --open",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "build-dev": "webpack --mode-development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.js src/**/*.jsx"
