--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "axios": "^1.5.0",
     "clean-terminal-webpack-plugin": "^3.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-draggable": "^4.4.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
