--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@babel/eslint-parser": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
-    "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.0.1",
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -39,15 +39,13 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1",
-    "react-scripts": "^5.0.1",
     "style-loader": "^3.3.3",
-    "web-vitals": "^3.4.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
@@ -74,9 +72,7 @@
       "airbnb",
       "eslint:recommended",
       "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "plugin:testing-library/react",
-      "plugin:jest/all"
+      "plugin:react/jsx-runtime"
     ],
     "parser": "@babel/eslint-parser",
     "parserOptions": {
